examples/test/testpolicy12442.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12442
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key31: value38
      key5: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value21
      podSelector:
        matchLabels:
          key40: value49
          key49: value4
